--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,7 @@
         "phpunit/phpunit"                          : "^6.0",
         "sepia/po-parser"                          : "^4.2",
         "symfony/polyfill-xml"                     : "^1.3",
-        "symfony/yaml"                             : "~3.3",
+        "symfony/yaml"                             : "~3.4 || ~4.0",
         "yosymfony/toml"                           : "^0.3",
         "viserio/console"                          : "self.version",
         "viserio/container"                        : "self.version"
@@ -61,7 +61,7 @@
     },
     "suggest": {
         "container-interop/service-provider"       : "Required to use service-provider (^0.4).",
-        "symfony/yaml"                             : "Required to use the YAML parser (~3.3).",
+        "symfony/yaml"                             : "Required to use the YAML parser (~3.4).",
         "sepia/po-parser"                          : "Required to use the PO parser (^4.2).",
         "spatie/array-to-xml"                      : "Required to use the XML dump (^2.1.1).",
         "yosymfony/toml"                           : "Required to use the TOML parser (^0.3).",
