added a doc info added a new tag to parser composer.json

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "xliff",
         "xlf",
         "parser",
-        "parser"
+        "parser",
+        "dumper"
     ],
     "homepage": "http://github.com/narrowspark/framework",
     "license": "MIT",
