--- a/composer.json
+++ b/composer.json
@@ -57,7 +57,7 @@
         "branch-alias": {
             "dev-master": "1.0-dev"
         },
-        "discovery": {
+        "automatic": {
             "providers": {
                 "Viserio\\Component\\Parser\\Provider\\ParserServiceProvider": [
                     "global"
