--- a/composer.json
+++ b/composer.json
@@ -29,10 +29,10 @@
     "require": {
         "php": "^7.2",
         "ext-fileinfo": "*",
-        "narrowspark/pretty-array": "^1.0",
         "symfony/polyfill-ctype": "^1.8.0",
         "symfony/polyfill-mbstring": "^1.8.0",
         "symfony/polyfill-xml": "^1.8.0",
+        "symfony/var-exporter": "^4.2.0",
         "viserio/contract": "self.version",
         "viserio/support": "self.version"
     },
