--- a/composer.json
+++ b/composer.json
@@ -33,8 +33,7 @@
         "symfony/polyfill-mbstring": "^1.8.0",
         "symfony/polyfill-xml": "^1.8.0",
         "symfony/var-exporter": "^4.2.0",
-        "viserio/contract": "self.version",
-        "viserio/support": "self.version"
+        "viserio/contract": "self.version"
     },
     "require-dev": {
         "container-interop/service-provider": "^0.4",
