--- a/composer.json
+++ b/composer.json
@@ -38,8 +38,9 @@
     "require-dev": {
         "container-interop/service-provider": "^0.4",
         "mikey179/vfsStream": "^1.6",
+        "mockery/mockery": "^1.2.0",
         "narrowspark/testing-helper": "^7.0.0",
-        "phpunit/phpunit": "^7.2.0",
+        "phpunit/phpunit": "^7.5.0",
         "symfony/yaml": "^4.2.0",
         "viserio/console": "self.version",
         "viserio/container": "self.version",
