--- a/composer.json
+++ b/composer.json
@@ -24,33 +24,38 @@
             "email": "d.bannert@anolilab.de",
             "homepage": "http://www.anolilab.de",
             "role": "Developer"
+        },
+        {
+            "name": "Narrowspark Community",
+            "homepage": "https://narrowspark.com/contributors"
         }
     ],
     "require": {
-        "php": "^7.2",
+        "php": "^7.3",
         "ext-fileinfo": "*",
         "symfony/polyfill-ctype": "^1.8.0",
         "symfony/polyfill-mbstring": "^1.8.0",
         "symfony/polyfill-xml": "^1.8.0",
-        "symfony/var-exporter": "^4.2.0",
-        "viserio/contract": "self.version"
+        "symfony/var-exporter": "^4.3.5 || ^5.0.0",
+        "viserio/parser-contract": "self.version"
     },
     "require-dev": {
-        "container-interop/service-provider": "^0.4",
-        "mikey179/vfsStream": "^1.6",
-        "mockery/mockery": "^1.2.0",
-        "narrowspark/testing-helper": "^7.0.0",
-        "phpunit/phpunit": "^7.5.0",
-        "symfony/yaml": "^4.2.0",
+        "mikey179/vfsstream": "^1.6.7",
+        "mockery/mockery": "^1.2.3",
+        "narrowspark/coding-standard": "^3.1.0",
+        "narrowspark/testing-helper": "^8.0.1",
+        "phpunit/phpunit": "8.2.*",
+        "slam/phpstan-extensions": "^3.6.1",
+        "symfony/yaml": "^4.3.5 || ^5.0.0",
         "viserio/console": "self.version",
         "viserio/container": "self.version",
+        "viserio/phpstan-bridge": "self.version",
         "yosymfony/toml": "^1.0.3"
     },
     "suggest": {
-        "container-interop/service-provider": "Required to use service-provider (^0.4).",
-        "symfony/yaml": "Required to use the YAML parser (^4.2.0).",
+        "symfony/yaml": "Required to use the YAML parser (^4.2 | ^5.0).",
         "viserio/console": "Required to use the YAML and XLIFF lint command (self.version).",
-        "viserio/statical-proxy": "Required to use the proxy instances (self.version).",
+        "viserio/container": "Required to use service-provider (self.version).",
         "yosymfony/toml": "Required to use the TOML parser (^1.0.3)."
     },
     "extra": {
