--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "parser",
         "dumper"
     ],
-    "homepage": "http://github.com/narrowspark/framework",
+    "homepage": "https://github.com/narrowspark/framework",
     "license": "MIT",
     "authors": [
         {
