--- a/composer.json
+++ b/composer.json
@@ -37,12 +37,13 @@
         "symfony/polyfill-mbstring": "^1.8.0",
         "symfony/polyfill-xml": "^1.8.0",
         "symfony/var-exporter": "^4.3.8 || ^5.0.0",
-        "viserio/parser-contract": "^1.0@dev"
+        "viserio/parser-contract": "^1.0@dev",
+        "viserio/support-contract": "^1.0@dev"
     },
     "require-dev": {
         "mikey179/vfsstream": "^1.6.8",
         "mockery/mockery": "^1.2.4",
-        "narrowspark/coding-standard": "^3.3.0",
+        "narrowspark/coding-standard": "^3.4.0",
         "narrowspark/testing-helper": "^8.0.2",
         "phpunit/phpunit": "8.2.*",
         "slam/phpstan-extensions": "^4.0.0",
